implement model in web app

--- a/src/models/model_sandbox.ipynb
+++ b/src/models/model_sandbox.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 46,
    "id": "0f1b6055",
    "metadata": {},
    "outputs": [
@@ -41,44 +41,44 @@
        "      <th></th>\n",
        "      <th>ndex</th>\n",
        "      <th>thumbnail</th>\n",
-       "      <th>description</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>name</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
+       "      <th>description</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>Bulbasaur</th>\n",
+       "      <th>0</th>\n",
        "      <td>1</td>\n",
        "      <td>https://archives.bulbagarden.net/media/upload/...</td>\n",
+       "      <td>Bulbasaur</td>\n",
        "      <td>weak weak frail frail slow light short Chlorop...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Ivysaur</th>\n",
+       "      <th>1</th>\n",
        "      <td>2</td>\n",
        "      <td>https://archives.bulbagarden.net/media/upload/...</td>\n",
+       "      <td>Ivysaur</td>\n",
        "      <td>weak weak frail frail slow light short Chlorop...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Venusaur</th>\n",
+       "      <th>2</th>\n",
        "      <td>3</td>\n",
        "      <td>https://archives.bulbagarden.net/media/upload/...</td>\n",
+       "      <td>Venusaur</td>\n",
        "      <td>weak weak frail frail slow light short Chlorop...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Charmander</th>\n",
+       "      <th>3</th>\n",
        "      <td>4</td>\n",
        "      <td>https://archives.bulbagarden.net/media/upload/...</td>\n",
+       "      <td>Charmander</td>\n",
        "      <td>weak weak frail frail slow light short Blaze S...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Charmeleon</th>\n",
+       "      <th>4</th>\n",
        "      <td>5</td>\n",
        "      <td>https://archives.bulbagarden.net/media/upload/...</td>\n",
+       "      <td>Charmeleon</td>\n",
        "      <td>weak weak frail frail slow light short Blaze S...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -86,30 +86,28 @@
        "</div>"
       ],
       "text/plain": [
-       "            ndex                                          thumbnail  \\\n",
-       "name                                                                  \n",
-       "Bulbasaur      1  https://archives.bulbagarden.net/media/upload/...   \n",
-       "Ivysaur        2  https://archives.bulbagarden.net/media/upload/...   \n",
-       "Venusaur       3  https://archives.bulbagarden.net/media/upload/...   \n",
-       "Charmander     4  https://archives.bulbagarden.net/media/upload/...   \n",
-       "Charmeleon     5  https://archives.bulbagarden.net/media/upload/...   \n",
+       "   ndex                                          thumbnail        name  \\\n",
+       "0     1  https://archives.bulbagarden.net/media/upload/...   Bulbasaur   \n",
+       "1     2  https://archives.bulbagarden.net/media/upload/...     Ivysaur   \n",
+       "2     3  https://archives.bulbagarden.net/media/upload/...    Venusaur   \n",
+       "3     4  https://archives.bulbagarden.net/media/upload/...  Charmander   \n",
+       "4     5  https://archives.bulbagarden.net/media/upload/...  Charmeleon   \n",
        "\n",
-       "                                                  description  \n",
-       "name                                                           \n",
-       "Bulbasaur   weak weak frail frail slow light short Chlorop...  \n",
-       "Ivysaur     weak weak frail frail slow light short Chlorop...  \n",
-       "Venusaur    weak weak frail frail slow light short Chlorop...  \n",
-       "Charmander  weak weak frail frail slow light short Blaze S...  \n",
-       "Charmeleon  weak weak frail frail slow light short Blaze S...  "
+       "                                         description  \n",
+       "0  weak weak frail frail slow light short Chlorop...  \n",
+       "1  weak weak frail frail slow light short Chlorop...  \n",
+       "2  weak weak frail frail slow light short Chlorop...  \n",
+       "3  weak weak frail frail slow light short Blaze S...  \n",
+       "4  weak weak frail frail slow light short Blaze S...  "
       ]
      },
-     "execution_count": 23,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = pd.read_csv(\"data/bulbapedia_smogon_data.csv\").set_index(\"name\")\n",
+    "df = pd.read_csv(\"data/bulbapedia_smogon_data.csv\")#.set_index(\"name\")\n",
     "df.head()"
    ]
   },
@@ -133,7 +131,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3d09e71e",
+   "id": "71acc5f4",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -141,7 +139,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "9c73f910",
+   "id": "0d9e7aec",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +172,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0003b2d8",
+   "id": "2c085bb5",
    "metadata": {},
    "outputs": [],
    "source": []
