continue word2vec + tfidf model in notebook

--- a/src/models/model_sandbox.ipynb
+++ b/src/models/model_sandbox.ipynb
@@ -117,7 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": 143,
-   "id": "ef462270",
+   "id": "7e04b62a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ab3fd809",
+   "id": "800f9174",
    "metadata": {},
    "source": [
     "----"
@@ -141,7 +141,7 @@
   {
    "cell_type": "code",
    "execution_count": 144,
-   "id": "867472a8",
+   "id": "f72f258f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,7 +152,7 @@
   {
    "cell_type": "code",
    "execution_count": 145,
-   "id": "63628b8e",
+   "id": "f37c0d3b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,7 +181,7 @@
   {
    "cell_type": "code",
    "execution_count": 146,
-   "id": "4b2a8201",
+   "id": "2c11d335",
    "metadata": {},
    "outputs": [
     {
@@ -286,13 +286,13 @@
     }
    ],
    "source": [
-    "w2v_tf_idf(\"fire\")"
+    "# w2v_tf_idf(\"fire\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 101,
-   "id": "ea445a19",
+   "id": "ba51649e",
    "metadata": {},
    "outputs": [
     {
@@ -307,37 +307,17 @@
     }
    ],
    "source": [
-    "df_by_name.loc[\"Wartortle\"][\"description\"]"
+    "# df_by_name.loc[\"Wartortle\"][\"description\"]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
-   "id": "1cc3caa1",
+   "execution_count": 148,
+   "id": "28dbd884",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['dry',\n",
-       " 'natural',\n",
-       " 'sand',\n",
-       " 'waste',\n",
-       " 'drinking',\n",
-       " 'clean',\n",
-       " 'ocean',\n",
-       " 'soil',\n",
-       " 'sewage',\n",
-       " 'seawater']"
-      ]
-     },
-     "execution_count": 128,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "list(map(lambda item: item[0], wiki_vectors.most_similar([\"water\", \"tail\", \"luck\"])))"
+    "# list(map(lambda item: item[0], wiki_vectors.most_similar([\"water\", \"tail\", \"luck\"])))"
    ]
   },
   {
@@ -364,90 +344,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 147,
    "id": "2c085bb5",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['weak',\n",
-       " 'weak',\n",
-       " 'frail',\n",
-       " 'frail',\n",
-       " 'slow',\n",
-       " 'light',\n",
-       " 'short',\n",
-       " 'Chlorophyll',\n",
-       " 'Overgrow',\n",
-       " 'Grass',\n",
-       " 'Poison',\n",
-       " 'Bulbasaur',\n",
-       " '1.0',\n",
-       " 'Ivysaur',\n",
-       " 'skin',\n",
-       " 'legs',\n",
-       " 'instinct',\n",
-       " 'anime',\n",
-       " 'ingrasslandsand',\n",
-       " 'eyes',\n",
-       " 'garden',\n",
-       " 'photosynthesis',\n",
-       " 'region',\n",
-       " 'structures',\n",
-       " 'ownership',\n",
-       " 'head',\n",
-       " 'year',\n",
-       " 'amphibian',\n",
-       " 'by',\n",
-       " 'Bulbasaur',\n",
-       " 'forests',\n",
-       " 'patches',\n",
-       " 'tentacle',\n",
-       " 'claws',\n",
-       " 'pupils',\n",
-       " 'ear',\n",
-       " 'seeds',\n",
-       " 'wild',\n",
-       " 'back',\n",
-       " 'animehave',\n",
-       " 'vines',\n",
-       " 'bulb',\n",
-       " 'ceremony',\n",
-       " 'teeth',\n",
-       " 'plant',\n",
-       " 'status',\n",
-       " 'seed',\n",
-       " 'grasslands',\n",
-       " 'abandonment',\n",
-       " 'theKantoregion',\n",
-       " 'snout',\n",
-       " 'mouth',\n",
-       " 'energy',\n",
-       " 'pair',\n",
-       " 'jaw',\n",
-       " 'air',\n",
-       " 'term',\n",
-       " 'individual',\n",
-       " 'birth',\n",
-       " 'transformation',\n",
-       " 'top',\n",
-       " 'gather']"
-      ]
-     },
-     "execution_count": 97,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "df[\"description\"][0].split()"
+    "# df[\"description\"][0].split()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "07aba956",
+   "id": "74309356",
    "metadata": {},
    "outputs": [],
    "source": []
