add gpt and word2vec error handling

--- a/src/models/model_sandbox.ipynb
+++ b/src/models/model_sandbox.ipynb
@@ -2,16 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 1,
    "id": "4b78d6b5",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[38;5;2m✔ Download and installation successful\u001b[0m\n",
-      "You can now load the package via spacy.load('en_core_web_sm')\n"
+      "None of PyTorch, TensorFlow >= 2.0, or Flax have been found. Models won't be available and only tokenizers, configuration and file/data utilities can be used.\n"
      ]
     }
    ],
@@ -26,7 +25,9 @@
     "from gensim.models import Word2Vec\n",
     "from gensim.models import KeyedVectors\n",
     "from gensim.models.doc2vec import Doc2Vec, TaggedDocument\n",
-    "from scipy import spatial"
+    "from scipy import spatial\n",
+    "\n",
+    "from transformers import pipeline"
    ]
   },
   {
@@ -263,12 +264,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "15567f8a",
+   "metadata": {},
+   "source": [
+    "### Transformer"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "15de9a8b",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "model = pipeline(\"zero-shot-classification\", model=\"facebook/bart-large-mnli\")"
+   ]
   },
   {
    "cell_type": "code",
